# hydra-torchrun-launcher

./: MANIFEST.in  README.md  pyproject.toml
hydra_plugins/hydra_torchrun_launcher/: __init__.py  _core.py  config.py  distributed_launcher.py
test/: __init__.py  test_hydra_torchrun_launcher.py
